--- a/notebooks/Practical1.ipynb
+++ b/notebooks/Practical1.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9e6bb1295f6a1c41",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T09:54:08.604950700Z",
-     "start_time": "2023-09-19T09:54:08.573302300Z"
+     "end_time": "2023-09-20T09:57:06.231039100Z",
+     "start_time": "2023-09-20T09:57:06.199359600Z"
     }
    },
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -86,8 +86,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T09:54:09.633411900Z",
-     "start_time": "2023-09-19T09:54:09.618682100Z"
+     "end_time": "2023-09-20T10:06:08.231847600Z",
+     "start_time": "2023-09-20T10:06:08.200461Z"
     }
    },
    "id": "1b3263efcf77ba8d"
@@ -375,14 +375,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "e00fdbc3454b3e0",
+   "execution_count": 0,
+   "id": "6f9f5ec9918545ea",
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-19T09:54:26.877506400Z",
-     "start_time": "2023-09-19T09:54:26.872493300Z"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -394,45 +390,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
+   "outputs": [],
+   "source": [
+    "test_list = [1, 1, 2, 2, 2, 3, 3, 4, 4, 4, 4, 5, 5, 6, 7, 8, 8, 8, 9, 9, 9, 9, 9]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-20T10:10:56.893888400Z",
+     "start_time": "2023-09-20T10:10:56.868559200Z"
+    }
+   },
+   "id": "e00fdbc3454b3e0"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "86ea2864ab680a75",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T09:54:29.102665200Z",
-     "start_time": "2023-09-19T09:54:29.101054600Z"
+     "end_time": "2023-09-20T10:10:57.922841900Z",
+     "start_time": "2023-09-20T10:10:57.906690Z"
     }
    },
    "outputs": [],
    "source": [
     "def remove_every_element_from_list(input_list):\n",
-    "    input_list = []\n",
-    "    return input_list"
+    "    input_list.clear()\n",
+    "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "id": "fd4fb9107a1c62e6",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T09:54:29.790055100Z",
-     "start_time": "2023-09-19T09:54:29.774226900Z"
+     "end_time": "2023-09-20T10:11:00.746763Z",
+     "start_time": "2023-09-20T10:11:00.730830300Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[]"
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "remove_every_element_from_list(list1)"
+    "remove_every_element_from_list(test_list)"
    ]
   },
   {
