--- a/notebooks/Practical1.ipynb
+++ b/notebooks/Practical1.ipynb
@@ -31,8 +31,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-20T09:57:06.231039100Z",
-     "start_time": "2023-09-20T09:57:06.199359600Z"
+     "end_time": "2023-09-20T11:07:08.669414600Z",
+     "start_time": "2023-09-20T11:07:08.665781200Z"
     }
    },
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -86,8 +86,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-20T10:06:08.231847600Z",
-     "start_time": "2023-09-20T10:06:08.200461Z"
+     "end_time": "2023-09-20T11:07:10.970414600Z",
+     "start_time": "2023-09-20T11:07:10.965549Z"
     }
    },
    "id": "1b3263efcf77ba8d"
@@ -907,47 +907,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "68f45914d66fee0f",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T09:56:01.714482Z",
-     "start_time": "2023-09-19T09:56:01.682975500Z"
+     "end_time": "2023-09-20T11:08:24.243730800Z",
+     "start_time": "2023-09-20T11:08:24.196423900Z"
     }
    },
    "outputs": [],
    "source": [
     "def element_wise_sum(input_list1, input_list2):\n",
     "    new_list = []\n",
-    "    for i in range(len(input_list1)):\n",
+    "    if len(input_list1) < len(input_list2):\n",
+    "        shorter_list = input_list1\n",
+    "    else:\n",
+    "        shorter_list = input_list2\n",
+    "    for i in range(len(shorter_list)):\n",
     "        new_list.append(input_list1[i] + input_list2[i])\n",
     "    return new_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "8587e0ed68288c5b",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T09:56:02.291012300Z",
-     "start_time": "2023-09-19T09:56:02.275192900Z"
+     "end_time": "2023-09-20T11:11:06.765819900Z",
+     "start_time": "2023-09-20T11:11:06.702705800Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+      "text/plain": "[2, 3, 5, 6, 7, 9, 10, 12, 13, 14]"
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "element_wise_sum(list2, list2)"
+    "element_wise_sum(list2, test_list)"
    ]
   },
   {
