--- a/notebooks/Practical1.ipynb
+++ b/notebooks/Practical1.ipynb
@@ -1103,13 +1103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "id": "4e2768e426b188ac",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:35:47.553504500Z",
-     "start_time": "2023-09-19T07:35:47.537606800Z"
+     "end_time": "2023-09-20T11:14:21.031901900Z",
+     "start_time": "2023-09-20T11:14:21.004728Z"
     }
    },
    "outputs": [],
@@ -1126,27 +1126,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "id": "7bca392945d6a984",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:35:47.730894700Z",
-     "start_time": "2023-09-19T07:35:47.725057300Z"
+     "end_time": "2023-09-20T11:14:22.088867600Z",
+     "start_time": "2023-09-20T11:14:22.057167900Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "False"
+      "text/plain": "True"
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "only_unique_in_list([1, 1, 2])"
+    "only_unique_in_list([1, 2])"
    ]
   },
   {
