--- a/notebooks/Practical1.ipynb
+++ b/notebooks/Practical1.ipynb
@@ -390,53 +390,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "outputs": [],
-   "source": [
-    "test_list = [1, 1, 2, 2, 2, 3, 3, 4, 4, 4, 4, 5, 5, 6, 7, 8, 8, 8, 9, 9, 9, 9, 9]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-20T10:10:56.893888400Z",
-     "start_time": "2023-09-20T10:10:56.868559200Z"
-    }
-   },
-   "id": "e00fdbc3454b3e0"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "86ea2864ab680a75",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-20T10:10:57.922841900Z",
-     "start_time": "2023-09-20T10:10:57.906690Z"
+     "end_time": "2023-09-20T14:12:30.442423400Z",
+     "start_time": "2023-09-20T14:12:30.436305500Z"
     }
    },
    "outputs": [],
    "source": [
     "def remove_every_element_from_list(input_list):\n",
-    "    input_list.clear()\n",
-    "    return None"
+    "    input_list.clear()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "fd4fb9107a1c62e6",
+   "execution_count": 0,
+   "id": "748fb949f2ac9f1a",
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-20T10:11:00.746763Z",
-     "start_time": "2023-09-20T10:11:00.730830300Z"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "remove_every_element_from_list(test_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "test_list = [1, 1, 2, 2, 2, 3, 3, 4, 4, 4, 4, 5, 5, 6, 7, 8, 8, 8, 9, 9, 9, 9, 9]"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a3966a14c6cc835c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_list)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-20T14:13:58.811283500Z",
+     "start_time": "2023-09-20T14:13:58.795391500Z"
+    }
+   },
+   "id": "fd4fb9107a1c62e6"
   },
   {
    "cell_type": "code",
