--- a/notebooks/Practical1.ipynb
+++ b/notebooks/Practical1.ipynb
@@ -390,48 +390,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "86ea2864ab680a75",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-20T14:12:30.442423400Z",
-     "start_time": "2023-09-20T14:12:30.436305500Z"
+     "end_time": "2023-09-20T15:05:24.951170500Z",
+     "start_time": "2023-09-20T15:05:24.946063100Z"
     }
    },
    "outputs": [],
    "source": [
     "def remove_every_element_from_list(input_list):\n",
-    "    input_list.clear()"
+    "    return print(input_list.clear())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "id": "748fb949f2ac9f1a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-20T15:05:26.389505600Z",
+     "start_time": "2023-09-20T15:05:26.389000600Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "remove_every_element_from_list(test_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "test_list = [1, 1, 2, 2, 2, 3, 3, 4, 4, 4, 4, 5, 5, 6, 7, 8, 8, 8, 9, 9, 9, 9, 9]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-20T15:05:22.486030800Z",
+     "start_time": "2023-09-20T15:05:22.477519800Z"
+    }
    },
    "id": "a3966a14c6cc835c"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -447,8 +463,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-20T14:13:58.811283500Z",
-     "start_time": "2023-09-20T14:13:58.795391500Z"
+     "end_time": "2023-09-20T15:05:28.512723700Z",
+     "start_time": "2023-09-20T15:05:28.509435100Z"
     }
    },
    "id": "fd4fb9107a1c62e6"
